<!--
 ********************************************************************
 * Licensed Materials - Property of IBM                             *
 *                                                                  *
 * Copyright IBM Corp. 2015 All rights reserved.                    *
 *                                                                  *
 * US Government Users Restricted Rights - Use, duplication or      *
 * disclosure restricted by GSA ADP Schedule Contract with          *
 * IBM Corp.                                                        *
 *                                                                  *
 * DISCLAIMER OF WARRANTIES. The following [enclosed] code is       *
 * sample code created by IBM Corporation. This sample code is      *
 * not part of any standard or IBM product and is provided to you   *
 * solely for the purpose of assisting you in the development of    *
 * your applications. The code is provided "AS IS", without         *
 * warranty of any kind. IBM shall not be liable for any damages    *
 * arising out of your use of the sample code, even if they have    *
 * been advised of the possibility of such damages.                 *
 ********************************************************************
-->

<resources>
  <string name="test_app_name">Android SDK Test App</string>
  <string name="title_items_list">Content Items</string>
  <string name="title_item_detail">Content Item Detail</string>
  <string name="title_activity_content_types">Content Types</string>

  <!-- url, user and password for the MACM instance -->
  <!--
  <string name="server_url_default">https://macm-mobile-nightly.rtp.raleigh.ibm.com:10042</string>
  <string name="macm_lib_default">OOTB Content</string>
  -->
  <string name="server_url_default">http://macm-master-cf06.rtp.raleigh.ibm.com:10039</string>
  <string name="macm_lib_default">MACM Default Application</string>
  <string name="username_default">wpsadmin</string>
  <string name="password_default">wpsadmin</string>

  <!-- labels for the details of a content item -->
  <string name="author_label">Author</string>
  <string name="published_label">Published </string>
  <string name="isbn_label"> ISBN</string>
  <string name="price_label">Price</string>
  <string name="rating_label">Rating</string>
  <string name="categories_label">Categories</string>
  <string name="keywords_label">Keywords</string>

 </resources>
