<!--
 ********************************************************************
 * Licensed Materials - Property of IBM                             *
 *                                                                  *
 * Copyright IBM Corp. 2015 All rights reserved.                    *
 *                                                                  *
 * US Government Users Restricted Rights - Use, duplication or      *
 * disclosure restricted by GSA ADP Schedule Contract with          *
 * IBM Corp.                                                        *
 *                                                                  *
 * DISCLAIMER OF WARRANTIES. The following [enclosed] code is       *
 * sample code created by IBM Corporation. This sample code is      *
 * not part of any standard or IBM product and is provided to you   *
 * solely for the purpose of assisting you in the development of    *
 * your applications. The code is provided "AS IS", without         *
 * warranty of any kind. IBM shall not be liable for any damages    *
 * arising out of your use of the sample code, even if they have    *
 * been advised of the possibility of such damages.                 *
 ********************************************************************
-->

<!-- this is the details screen for a content item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment_article_detail"
  android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal"
  tools:context="com.ibm.caas.sdktest.activities.LoginActivity">

  <!-- labels of the displayed elements content item -->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="match_parent" android:orientation="vertical"
    android:padding="8dp">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_label"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/author_label"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/published_label"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/isbn_label"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/price_label"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rating_label"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/categories_label"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keywords_label"/>

  </LinearLayout>

  <!-- values of the displayed elements content item -->
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content" android:layout_height="match_parent" android:orientation="vertical"
    android:padding="8dp">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/title_detail"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/author"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/published"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/isbn"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/price"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/rating"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/categories"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/keywords"/>

  </LinearLayout>

</LinearLayout>